# randar

./: .gitignore  README.md  eval_c2i.py  eval_calibration.py  eval_calibration_sample_level.py  eval_calibration_token_level.py  print_metrics.py  pyproject.toml  run.sh  run_hp_tuning.py  sample_c2i.py  search_cfg.sh  train_c2i.py
RandAR/: util.py
RandAR/dataset/: augmentation.py  builder.py  cifar10.py  imagenet.py  latent.py
RandAR/eval/: calibration.py  fid.py  nll_ppl_acc.py  utils.py
RandAR/model/: generate.py  llamagen_gpt.py  maskgit_tokenizer.py  randar_gpt.py  tokenizer.py  utils.py
RandAR/utils/: instantiation.py  latents.py  logger.py  lr_scheduler.py  visualization.py
configs/: randar_cifar10.yaml  randar_cifar10_adaptive.yaml  randar_cifar10_random_order.yaml  vq-vae.yaml
configs/llamagen/: llamagen_tokenizer.yaml  randar_0.3b_llamagen.yaml
data/: imagenet256_preprocessing.py  load_CIFAR10.py  load_and_split_CIFAR10C.py  load_imagenet256.py  split_cifar10.py
tokenizer_vq/: model.py  vq-vae.ipynb
tools/: extract_latent_codes.py  search_cfg_weights.py
