[project]
name = "randar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markupsafe==3.0.2",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
	"torchmetrics[image]>=1.0.3",
	"accelerate==0.31.0",
    "clearml>=1.18.0",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "omegaconf>=2.3.0",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "scipy>=1.17.0",
    "tensorflow>=2.20.0",
    "timm>=1.0.24",
	"umap-learn>=0.5.11",
]

[tool.uv]
index-url = "https://pypi.org/simple"


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"


